@@ -8,29 +8,24 @@ read on.
 
 ## Build Instructions ##
 
-The [gradle build system][2] will fetch all dependencies and generate
-files you need to build the project. You first need to generate the
-local.properties (replace YOUR_SDK_DIR with your actual android SDK directory)
-file and create the gradle.properties file. The easiest way is to copy
-our example:
+You first need to generate the `local.properties` (replace YOUR_SDK_DIR with
+your actual android SDK directory) file and create the `gradle.properties` file:
 
     $ echo "sdk.dir=YOUR_SDK_DIR" > local.properties
     $ cp ./WordPress/gradle.properties-example ./WordPress/gradle.properties
 
 Note: this is the default `./WordPress/gradle.properties` file. If you
-want to use WordPress.com functions (login to a WordPress.com account,
+want to use WordPress.com features (login to a WordPress.com account,
 access the Reader and Stats for example), you'll have to get a WordPress.com
 OAuth2 ID and secret. Please read the
 [OAuth2 Authentication](#oauth2-authentication) section.
 
-The previous command creates a `libs/` directory and clones all dependencies needed
-by the main WordPress for Android project. You can now build, install and
-test the project:
+You can now build, install and test the project:
 
     $ ./gradlew assembleVanillaDebug # assemble the debug .apk
     $ ./gradlew installVanillaDebug  # install the debug .apk if you have an
                                      # emulator or an Android device connected
-    $ ./gradlew WordPress:cAT        # assemble, install and run unit tests
+    $ ./gradlew cAT                  # assemble, install and run unit tests
 
 You can use [Android Studio][3] by importing the project as a Gradle project.
 
@@ -48,7 +43,7 @@ You can use [Android Studio][3] by importing the project as a Gradle project.
             |   |-- java        # main project java code
             |   `-- res         # main project resources
             |-- vanilla         # vanilla variant specific manifest
-            `-- zbetagroup      # beta variant specific resources and manifest
+            `-- wasabi          # wasabi variant specific resources and manifest
 
 ## OAuth2 Authentication ##
 
@@ -80,7 +75,13 @@ how we're organizing branches in our repository in the
 
 Say hello on our [Slack][4] channel: `#mobile`.
 
-## License
+## FAQ ##
+
+* Q: I can't build/test/package the project because of a `PermGen space` error.
+* A: Create a `build.properties` file in the project root directory with the
+following: `org.gradle.jvmargs=-XX:MaxPermSize=1024m`.
+
+## License ##
 
 WordPress for Android is an Open Source project covered by the
 [GNU General Public License version 2](LICENSE.md). Note: code
@@ -88,9 +89,9 @@ in the `libs/` directory comes from external libraries, which might
 be covered by a different license compatible with the GPLv2.
 
 [1]: https://play.google.com/store/apps/details?id=org.wordpress.android
-[2]: http://tools.android.com/tech-docs/new-build-system/user-guide
 [3]: http://developer.android.com/sdk/installing/studio.html
 [4]: https://make.wordpress.org/chat/
 [5]: https://developer.wordpress.com/apps/
 [6]: https://developer.wordpress.com/docs/oauth2/
 [7]: https://developer.wordpress.com/docs/api/
+[9]: https://facebook.github.io/watchman/docs/install.html
